--- a/remote_exec2/tasks/main.yml
+++ b/remote_exec2/tasks/main.yml
@@ -86,7 +86,7 @@
 
 - name: Install baids
   #script: /tmp/baids install
-  command: sh /tmp/baids install
+  command: sh ~/baids install
   become_user: emergya
 
 - name: Create project directory
