--- a/remote_exec2.yml
+++ b/remote_exec2.yml
@@ -3,7 +3,7 @@
   name: Collect facts
   tasks: [ ]
   become: true
-  become_user: emergya #ssh_username
+  become_user: emergya
 
   roles:
       - remote_exec2
