--- a/remote_exec1/tasks/main.yml
+++ b/remote_exec1/tasks/main.yml
@@ -15,6 +15,8 @@
     createhome: yes
     groups: 'sudo'
     append: yes
+  become: true
+  become_user: root
 
 # #https://docs.ansible.com/ansible/latest/modules/file_module.html#file-module
 # - name: Create user home directory
