--- a/remote_exec1.yml
+++ b/remote_exec1.yml
@@ -13,8 +13,8 @@
   name: Collect facts
   tasks: [ ]
   remote_user: ubuntu
-  # become: true
-  # become_user: root
+  become: true
+  become_user: root
 
   roles:
       - remote_exec1
