--- a/remote_exec2/tasks/main.yml
+++ b/remote_exec2/tasks/main.yml
@@ -11,20 +11,20 @@
 #   file:
 #     path: /home/emergya
 #     owner: emergya
-
-- name: Change id_rsa permisions
-  file:
-    path: /home/emergya/.ssh/id_rsa
-    owner: emergya
-    mode: 0600
-  ignore_errors: yes #there is no id_rsa yet
-
-- name: Change id_rsa.pub permisions
-  file:
-    path: /home/emergya/.ssh/id_rsa.pub
-    owner: emergya
-    mode: 0644
-  ignore_errors: yes #there is no id_rsa.pub yet
+#
+# - name: Change id_rsa permisions
+#   file:
+#     path: /home/emergya/.ssh/id_rsa
+#     owner: emergya
+#     mode: 0600
+#   ignore_errors: yes
+#
+# - name: Change id_rsa.pub permisions
+#   file:
+#     path: /home/emergya/.ssh/id_rsa.pub
+#     owner: emergya
+#     mode: 0644
+#   ignore_errors: yes
 
 - name: Execute iptables script
   script: /usr/local/bin/custom-iptables
@@ -57,26 +57,36 @@
      - bash-completion
      - ntp
      - ntpdate
+  become: true
+  become_user: root
 
 - name: Delete iptables.rules file
   file:
     state: absent
     path: "/etc/iptables/rules.v4"
+  become: true
+  become_user: root
 
 # check this!!!!
 - name: execute command
   shell: sudo iptables-save | sudo tee -a /etc/iptables/rules.v4
+  become: true
+  become_user: root
 
 - name: Edit ssh config
   lineinfile:
     path: /etc/ssh/sshd_config
     regexp: 'PermitRootLogin yes'
     line: 'PermitRootLogin without-password'
+  become: true
+  become_user: root
 
 - name: Restart ssh service
   service:
     name: sshd
     state: restarted
+  become: true
+  become_user: root
 
 - name: Download baids repository
   get_url:
