--- a/remote_exec2/tasks/main.yml
+++ b/remote_exec2/tasks/main.yml
@@ -12,18 +12,18 @@
 #     path: /home/emergya
 #     owner: emergya
 #
-# - name: Change id_rsa permisions
-#   file:
-#     path: /home/emergya/.ssh/id_rsa
-#     owner: emergya
-#     mode: 0600
+- name: Change id_rsa permisions
+  file:
+    path: /home/emergya/.ssh/id_rsa
+    owner: emergya
+    mode: 0600
 #   ignore_errors: yes
-#
-# - name: Change id_rsa.pub permisions
-#   file:
-#     path: /home/emergya/.ssh/id_rsa.pub
-#     owner: emergya
-#     mode: 0644
+
+- name: Change id_rsa.pub permisions
+  file:
+    path: /home/emergya/.ssh/id_rsa.pub
+    owner: emergya
+    mode: 0644
 #   ignore_errors: yes
 
 - name: Execute iptables script
