--- a/remote_exec1.yml
+++ b/remote_exec1.yml
@@ -12,7 +12,7 @@
 - hosts: all
   name: Collect facts
   tasks: [ ]
-  remote_user: ubuntu
+  remote_user: usuario
   become: true
   become_user: root
 
